--- a/notebooks/søk i notes.ipynb
+++ b/notebooks/søk i notes.ipynb
@@ -5,17 +5,26 @@
    "execution_count": null,
    "metadata": {
     "jupyter": {
+     "outputs_hidden": true,
      "source_hidden": true
     }
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "from IPython.core.display import display\n",
-    "from IPython.display import clear_output\n",
-    "from ipywidgets import interact, widgets\n",
-    "\n",
-    "%run search.py"
+    "%%html\n",
+    "<script>\n",
+    "    // AUTORUN ALL CELLS ON NOTEBOOK-LOAD!\n",
+    "    require(\n",
+    "        ['base/js/namespace', 'jquery'], \n",
+    "        function(jupyter, $) {\n",
+    "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
+    "                console.log(\"Auto-running all cells-below...\");\n",
+    "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
+    "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
+    "            });\n",
+    "        }\n",
+    "    );\n",
+    "</script>"
    ]
   },
   {
@@ -28,28 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "root_dir = \".\"\n",
-    "ignore = \"-checkpoint.ipynb\"\n",
-    "\n",
-    "input_field = widgets.Text(\n",
-    "    value='',\n",
-    "    description='Søk i veilder:',\n",
-    "    disabled=False\n",
-    ")\n",
-    "result_field = widgets.Output(layout={'border': '1px solid black'})\n",
-    "display(input_field, result_field)\n",
-    "\n",
-    "def handle_submit(sender):\n",
-    "    with result_field:\n",
-    "        result_field.clear_output()\n",
-    "        result = search_text_in_notes(sender.value,root_dir,ignore)\n",
-    "        if not result:\n",
-    "            display(f\"Vi finner dessverre ingen resultater når du søker etter {sender.value}\")\n",
-    "        else:\n",
-    "            for file in result:\n",
-    "                display(file)\n",
-    "\n",
-    "input_field.on_submit(handle_submit)"
+    "%run search.py"
    ]
   }
  ],
