--- a/notebooks/Innhold i veilederen.ipynb
+++ b/notebooks/Innhold i veilederen.ipynb
@@ -1,6 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<script>\n",
+    "    // AUTORUN ALL CELLS ON NOTEBOOK-LOAD!\n",
+    "    require(\n",
+    "        ['base/js/namespace', 'jquery'], \n",
+    "        function(jupyter, $) {\n",
+    "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
+    "                console.log(\"Auto-running all cells-below...\");\n",
+    "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
+    "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
+    "            });\n",
+    "        }\n",
+    "    );\n",
+    "</script>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run search.py"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -21,27 +61,13 @@
     "##### [Oppgaver og løsningsforslag](Oppgaver%20og%20løsningsforslag/Oppgaver%20og%20løsningsforslag.ipynb)\n",
     "Det er lettere å lære når du prøve selv!\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Pyspark (local)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyspark_local"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -53,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
