Refaktorert litt, og lagt til ignore_folders

--- a/notebooks/søk i notes.ipynb
+++ b/notebooks/søk i notes.ipynb
@@ -3,12 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%html\n",
@@ -28,17 +23,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Søketips\n",
+    "\n",
+    "For å søke på hele ord, legg inn mellomrom foran og bak teksten det søkes etter\n",
+    "\n",
+    "Det er kun første treff i en note som vises i søkeresultatet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%run search.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
