--- a/notebooks/Tips og triks.ipynb
+++ b/notebooks/Tips og triks.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "import dapla as dp\n",
-    "dp.show('/kilde/ske')"
+    "dp.show('/felles/veiledning/pyspark/eksempler')"
    ]
   },
   {
@@ -73,6 +73,15 @@
    "source": [
     "import dapla as dp\n",
     "dp.details('/felles/veiledning/pyspark/eksempler/areal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dp.details('/felles/veiledning/pyspark/eksempler/bnp')"
    ]
   },
   {
@@ -99,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
