--- a/notebooks/Tips og triks.ipynb
+++ b/notebooks/Tips og triks.ipynb
@@ -89,6 +89,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "dp.details('/felles/veiledning/pyspark/eksempler/areal/dokumentert')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -108,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
